--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
-ocrmypdf
-langchain 
-langchain-core 
+openai==1.23.6
+ocrmypdf==16.2.0
+langchain==0.1.16
+langchain-core==0.1.46
 langchain-openai==0.1.3
-langchain-community
-jsonschema
-pdfplumber
+langchain-community==0.0.34
+langserve==0.1.1
+langsmith==0.1.51
+sse-starlette==2.0.29
+jsonschema==4.21.1
+pdfplumber==0.11.0
 fastapi==0.103.2
 typing-inspect==0.8.0
 typing_extensions==4.5.0
 pydantic==1.10.11
+uvicorn==0.29.0
+python-dotenv==1.0.1
